Cleanup JPA configuration